--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     <title>Rock Paper Scissors</title>
     <script src="script.js"></script>
   </head>
-  <body></body>
+  <body>
+    s
+  </body>
 </html>
