--- a/index.html
+++ b/index.html
@@ -5,7 +5,5 @@
     <title>Rock Paper Scissors</title>
     <script src="script.js"></script>
   </head>
-  <body>
-    s
-  </body>
+  <body></body>
 </html>
