--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <button class="rock">Rock</button>
     <button class="paper">Paper</button>
     <button class="scissors">Scissors</button>
+    <div class="results">
+      <div class="heading">RESULTS</div>
+    </div>
   </body>
 </html>
