Move round number info to the top

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="script.js" defer></script>
   </head>
   <body>
+    <div class="round-number"></div>
     <button class="rock">Rock</button>
     <button class="paper">Paper</button>
     <button class="scissors">Scissors</button>
