Do slight refactoring

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <div class="round-number"></div>
-    <button class="rock">Rock</button>
-    <button class="paper">Paper</button>
-    <button class="scissors">Scissors</button>
+    <div class="button-container">
+      <button class="rock">Rock</button>
+      <button class="paper">Paper</button>
+      <button class="scissors">Scissors</button>
+    </div>
     <div class="results">
       <div class="heading">RESULTS</div>
     </div>
