--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <title>Rock Paper Scissors</title>
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="roundnumber-info"></div>
     <div class="button-container">
       <button class="rock">Rock</button>
       <button class="paper">Paper</button>
