Add google fonts link

--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
     <title>Rock Paper Scissors</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Ubuntu | Cairo"
+    />
   </head>
   <body>
+    <div class="heading">ROCK PAPER SCISSORS</div>
     <div class="roundnumber-info"></div>
     <div class="button-container">
       <button class="rock">Rock</button>
       <button class="paper">Paper</button>
       <button class="scissors">Scissors</button>
     </div>
-    <div class="results">
-      <div class="heading">RESULTS</div>
-    </div>
+    <div class="results"></div>
   </body>
 </html>
