--- a/index.html
+++ b/index.html
@@ -7,16 +7,35 @@
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Ubuntu | Cairo"
+      href="https://fonts.googleapis.com/css?family=Ubuntu|Cairo|Permanent Marker|Chakra Petch|Acme|Amatic SC"
     />
   </head>
   <body>
     <div class="heading">ROCK PAPER SCISSORS</div>
+    <div class="info">First to score 5 points win!</div>
+    <div class="play-field">
+      <span class="player-choice"
+        >YOU
+        <div class="game-information-player">
+          Click your play to start the game!
+        </div>
+        <div class="your-score">Your Score: -</div></span
+      >
+      <span class="versus-text">VS</span>
+      <span class="computer-choice"
+        >COMPUTER
+        <div class="game-information-computer">
+          Click your play to start the game!
+        </div>
+        <div class="computer-score">Computer's Score: -</div></span
+      >
+    </div>
+    <div class="results"></div>
     <div class="button-container">
       <button class="rock">Rock</button>
       <button class="paper">Paper</button>
       <button class="scissors">Scissors</button>
     </div>
-    <div class="results"></div>
+    <div class="game-over-text"></div>
   </body>
 </html>
