Display images of the choices when a round is played

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     <div class="play-field">
       <span class="player-choice"
         >YOU
+        <div class="player-images">
+          <img class="player-rock-img" src="images/rock.png" /><img
+            class="player-paper-img"
+            src="images/paper.png"
+          /><img class="player-scissors-img" src="images/scissors.png" />
+        </div>
         <div class="game-information-player">
           Click your play to start the game!
         </div>
@@ -24,6 +30,12 @@
       <span class="versus-text">VS</span>
       <span class="computer-choice"
         >COMPUTER
+        <div class="computer-images">
+          <img class="computer-rock-img" src="images/rock.png" /><img
+            class="computer-paper-img"
+            src="images/paper.png"
+          /><img class="computer-scissors-img" src="images/scissors.png" />
+        </div>
         <div class="game-information-computer">
           Click your play to start the game!
         </div>
