CHange footer for crediting new images

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
       <button class="scissors">Scissors</button>
     </div>
     <div class="game-over-text"></div>
-    <div class="footer">my art bad</div>
+    <div class="footer">
+      Images by
+      <a href="https://www.flaticon.com/free-icons/hand" title="hand icons"
+        >Hand icons created by Vitaly Gorbachev - Flaticon</a
+      >
+    </div>
   </body>
 </html>
